text overflowing fixed

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ li {
     background-color: limegreen;
     border-radius: 8px;
     width: auto;
-    height: 45px;
+    height: auto;
     color: white;
     font-weight: 800;
     font-size: 18px;
